--- a/ClientApp/src/app/nav-bar/nav-bar.component.html
+++ b/ClientApp/src/app/nav-bar/nav-bar.component.html
@@ -5,23 +5,17 @@
       [opened]="(isHandset$ | async) === false">
     <mat-toolbar>Menu</mat-toolbar>
     <mat-nav-list>
-      <a mat-list-item href="#">Link 1</a>
-      <a mat-list-item href="#">Link 2</a>
-      <a mat-list-item href="#">Link 3</a>
+      <a mat-list-item href="home">
+        <mat-icon>
+          home
+        </mat-icon>Főoldal
+      </a>
+      <a mat-list-item href="help">
+        <mat-icon>
+          help
+        </mat-icon>
+        Súgó
+      </a>
     </mat-nav-list>
   </mat-sidenav>
-  <mat-sidenav-content>
-    <mat-toolbar color="primary">
-      <button
-        type="button"
-        aria-label="Toggle sidenav"
-        mat-icon-button
-        (click)="drawer.toggle()"
-        *ngIf="isHandset$ | async">
-        <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
-      </button>
-      <span>ClientApp</span>
-    </mat-toolbar>
-    <!-- Add Content Here -->
-  </mat-sidenav-content>
 </mat-sidenav-container>
