--- a/ClientApp/src/app/nav-bar/nav-bar.component.scss
+++ b/ClientApp/src/app/nav-bar/nav-bar.component.scss
@@ -1,5 +1,6 @@
 .sidenav-container {
   height: 100%;
+  width: 200px;
 }
 
 .sidenav {
@@ -19,6 +20,10 @@
   z-index: 1;
 }
 
-.mat-nav-list.mat-list-item{
-  color: white;
+.mat-list-base .mat-list-item {
+  color: white !important;
+}
+
+.mat-icon {
+  padding-right: 0.5em;
 }
