Session használat, Angular - .NET core kommunikáció httpClient-tel

--- a/P4Analyst/AngularApp/ClientApp/src/app/home/home.component.html
+++ b/P4Analyst/AngularApp/ClientApp/src/app/home/home.component.html
@@ -4,7 +4,7 @@
 <br>
 
 <label mat-button class="custom-file-upload">
-    <input type="file" (change)="onChange($event.target.files)" style="display:none;"/>
+    <input type="file" accept=".txt" (change)="onChange($event.target.files)" style="display:none;"/>
     Fájl kiválasztás
     <mat-icon style="font-size:large;">
         vertical_align_top
