Gráf kirajzolás, egységes megjelenés, ikon animáció

--- a/P4Analyst/AngularApp/ClientApp/src/app/graph/graph.component.html
+++ b/P4Analyst/AngularApp/ClientApp/src/app/graph/graph.component.html
@@ -1,1 +1,3 @@
-<div id="graph"></div>
+<mat-progress-spinner *ngIf="loading"></mat-progress-spinner>
+
+<div id="graph" class="graph" [ngClass]="{'dont-touch': dontTouch, 'touch': !dontTouch }"></div>
