--- a/P4Analyst/AngularApp/ClientApp/src/app/app.component.html
+++ b/P4Analyst/AngularApp/ClientApp/src/app/app.component.html
@@ -1,10 +1,12 @@
-<div class="content" role="main">
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
+<div role="main">
   <div class='row'>
     <div>
       <app-nav-bar></app-nav-bar>
     </div>
-    <div class='body-content'>
+    <!--<div class="body-content">
       <router-outlet></router-outlet>
-    </div>
+    </div>-->
   </div>
 </div>
