--- a/P4Analyst/AngularApp/ClientApp/src/app/nav-bar/nav-bar.component.html
+++ b/P4Analyst/AngularApp/ClientApp/src/app/nav-bar/nav-bar.component.html
@@ -1,22 +1,39 @@
-<mat-sidenav-container color="primary" class="sidenav-container">
-  <mat-sidenav #drawer class="sidenav" fixedInViewport
-      [attr.role]="(isHandset$ | async) ? 'dialog' : 'navigation'"
-      [mode]="(isHandset$ | async) ? 'over' : 'side'"
-      [opened]="(isHandset$ | async) === false">
-    <mat-toolbar>Menu</mat-toolbar>
-    <mat-nav-list>
-      <a mat-list-item href="home">
-        <mat-icon>
-          home
-        </mat-icon>
-        Főoldal
-      </a>
-      <a mat-list-item href="help">
-        <mat-icon>
-          help
-        </mat-icon>
-        Súgó
-      </a>
-    </mat-nav-list>
-  </mat-sidenav>
-</mat-sidenav-container>
+<div class="example-container" [class.example-is-mobile]="mobileQuery.matches">
+  <mat-toolbar [color]="themeColor" class="example-toolbar">
+    <button mat-icon-button (click)="mobileQuery.matches ? snav.toggle() : opened=!opened">
+      <mat-animated-icon start="keyboard_arrow_left" end="keyboard_arrow_right"
+        colorStart="white" colorEnd="white" animate="false">
+      </mat-animated-icon>
+    </button>
+    <h1 class="example-app-name">P4 Analyst</h1>
+  </mat-toolbar>
+
+  <mat-sidenav-container autosize class="example-sidenav-container"
+                         [style.marginTop.px]="mobileQuery.matches ? 56 : 0">
+    <mat-sidenav #snav id="mat-sidenav" [mode]="mobileQuery.matches ? 'over' : 'side'"
+                 [fixedInViewport]="mobileQuery.matches" fixedTopGap="56"
+                 [attr.color]="themeColor" opened="true">
+        <mat-nav-list>
+        <a mat-list-item [routerLink]="['/home']"
+         [matTooltipDisabled]="opened" matTooltipPosition="right" matTooltip="Főoldal">
+          <mat-icon>
+            home
+          </mat-icon>
+          <h5 *ngIf="opened">Főoldal</h5>
+        </a>
+        <a mat-list-item [routerLink]="['/help']"
+         [matTooltipDisabled]="opened" matTooltipPosition="right" matTooltip="Súgó">
+          <mat-icon>
+            help
+          </mat-icon>
+          <h5 *ngIf="opened">Súgó</h5>
+        </a>
+      </mat-nav-list>
+    </mat-sidenav>
+    <mat-sidenav-content id="mat-sidenav-content">
+      <div class="body-content">
+        <router-outlet></router-outlet>
+      </div>  
+    </mat-sidenav-content>
+  </mat-sidenav-container>
+</div>
