--- a/P4Analyst/AngularApp/ClientApp/src/app/home/home.component.scss
+++ b/P4Analyst/AngularApp/ClientApp/src/app/home/home.component.scss
@@ -1,5 +1,56 @@
-.m-btn{
+.m-btn {
     margin: 1em;
+}
+
+.next-btn {
+    text-align: right;
+    padding: 0px 40px 20px 0px;
+}
+
+h1.title {
+    text-align: center;
+}
+
+mat-form-field.input-textarea {
+    left: 20px;
+    width: 97%;
+    height: 100%;
+}
+
+::ng-deep .mat-form-field-flex {
+    height: 100%;
+}
+
+::ng-deep .mat-form-field-infix {
+    height: 100%;
+}
+
+textarea.mat-input-element {
+    resize: none;
+    height: 100%;
+}
+
+mat-tab-group.min-height {
+    min-height: 76%;
+}
+
+::ng-deep .mat-tab-body-wrapper {
+    flex-grow: 1;
+}
+
+::ng-deep .mat-form-field-wrapper {
+    height: 100%;
+}
+
+.mat-tab-body {
+    display: flex !important;
+    flex-direction: column;
+}
+
+.mat-tab-body-content {
+    display: flex;
+    flex-direction: column;
+    flex-grow: 1;
 }
 
 .custom-file-upload {
