--- a/P4Analyst/AngularApp/ClientApp/src/app/nav-bar/nav-bar.component.html
+++ b/P4Analyst/AngularApp/ClientApp/src/app/nav-bar/nav-bar.component.html
@@ -6,6 +6,19 @@
       </mat-animated-icon>
     </button>
     <h1 class="example-app-name">P4 Analyst</h1>
+    <button mat-icon-button class="change-color" [matMenuTriggerFor]="menu">
+      <mat-icon>
+        format_color_fill
+      </mat-icon>
+    </button>
+    <mat-menu #menu="matMenu">
+      <button mat-menu-item hover-class='my-theme-change' (click)='changeTheme(true)'>
+        <span>Eredeti</span>
+      </button>
+      <button mat-menu-item hover-class='my-dark-theme-change' (click)='changeTheme(false)'>
+        <span>Sötét</span>
+      </button>
+    </mat-menu>
   </mat-toolbar>
 
   <mat-sidenav-container autosize class="example-sidenav-container"
