--- a/P4Analyst/AngularApp/ClientApp/src/app/home/home.component.html
+++ b/P4Analyst/AngularApp/ClientApp/src/app/home/home.component.html
@@ -4,8 +4,11 @@
 
 <mat-tab-group mat-stretch-tabs class="min-height" animationDuration="750ms">
     <mat-tab label="Fájl feltöltés">
-        <label mat-button class="custom-file-upload">
-            <input type="file" accept=".txt" (change)="onChange($event.target.files)" style="display:none;"/>
+
+        <app-file-upload (upload)="onUpload($event)"></app-file-upload>
+
+        <!--<label mat-button class="custom-file-upload">
+            <input type="file" accept=".txt,.p4" (change)="onChange($event.target.files)" style="display:none;"/>
             Fájl kiválasztás
             <mat-icon style="font-size:large;">
                 get_app
@@ -25,7 +28,7 @@
                   delete
               </mat-icon>
           </button>
-        </div>
+        </div>-->
     </mat-tab>
     <mat-tab label="Szövegbevitel">
         <mat-form-field class="input-textarea">
@@ -36,7 +39,7 @@
 </mat-tab-group>
 
 <div class="next-btn">
-    <button mat-raised-button color="primary" class="m-btn" (click)="onNext()" [disabled]="file==null">
+    <button mat-raised-button color="primary" class="m-btn" (click)="onNext()" [disabled]="fileData===null">
         Folytatás
         <mat-icon>
             send
