--- a/P4Analyst/AngularApp/ClientApp/src/app/nav-bar/nav-bar.component.html
+++ b/P4Analyst/AngularApp/ClientApp/src/app/nav-bar/nav-bar.component.html
@@ -6,6 +6,7 @@
       </mat-animated-icon>
     </button>
     <h1 class="example-app-name">P4 Analyst</h1>
+    <span class="spacer"></span>
     <button mat-icon-button class="change-color" [matMenuTriggerFor]="menu">
       <mat-icon>
         format_color_fill
