--- a/P4Analyst/AngularApp/ClientApp/src/app/file-upload/file-upload.component.scss
+++ b/P4Analyst/AngularApp/ClientApp/src/app/file-upload/file-upload.component.scss
@@ -1,23 +1,28 @@
-p {
-    font-family: Lato;
+.dropzone {
+  min-height: 400px;
+  min-width: 400px;
+  display: table;
+  margin: 0px 20px 0px 20px;
+  width: calc(100% - 40px);
+  background-color: #eee;
+  border: dotted 1px #aaa;
+}
+
+.dropzone-active {
+  :hover {
+    background-color: #aaa;
   }
-  .dropzone {
-    min-height: 400px;
-    min-width: 400px;
-    display: table;
-    width: 100%;
-    background-color: #eee;
-    border: dotted 1px #aaa;
-  }
+  cursor: pointer;
+}
   
-  .text-wrapper {
-    display: table-cell;
-    vertical-align: middle;
-  }
+.text-wrapper {
+  display: table-cell;
+  vertical-align: middle;
+}
   
-  .centered {
-    font-family: sans-serif;
-    font-size: 1.3em;
-    font-weight: bold;
-    text-align:center;
-  }
+.centered {
+  font-family: sans-serif;
+  font-size: 1.3em;
+  font-weight: bold;
+  text-align:center;
+}
