--- a/P4Analyst/AngularApp/ClientApp/src/app/home/home.component.scss
+++ b/P4Analyst/AngularApp/ClientApp/src/app/home/home.component.scss
@@ -12,8 +12,8 @@ h1.title {
 }
 
 mat-form-field.input-textarea {
-    left: 20px;
-    width: 97%;
+    margin: 0px 20px 0px 20px;
+    width: calc(100% - 40px);
     height: 100%;
 }
 
@@ -51,33 +51,4 @@ mat-tab-group.min-height {
     display: flex;
     flex-direction: column;
     flex-grow: 1;
-}
-
-.custom-file-upload {
-    :hover{
-     background-color: #bfbfbf;
-    }
-    display: inline-block;
-    padding-top: 6px;
-    padding-bottom: 6px;
-    padding-left: 12px;
-    margin: 1em;
-    background-color: lightgray;
-    cursor: pointer;
-    border-radius: 4px;
-    font-family: Roboto, "Helvetica Neue", sans-serif;
-    font-style: normal;
-    font-variant-ligatures: normal;
-    font-variant-caps: normal;
-    font-variant-numeric: normal;
-    font-variant-east-asian: normal;
-    font-weight: 500;
-    font-stretch: normal;
-    text-rendering: auto;
-    letter-spacing: normal;
-    word-spacing: normal;
-    text-transform: none;
-    text-indent: 0px;
-    text-shadow: none;
-    font-size: 14px;
 }
