--- a/P4Analyst/AngularApp/ClientApp/src/app/home/home.component.html
+++ b/P4Analyst/AngularApp/ClientApp/src/app/home/home.component.html
@@ -1,32 +1,34 @@
-<div>
-    <h1 class="title">Kód feltöltés</h1>
-</div>
+<div class="max-height flex-divs">
+    <div>
+        <h1 class="title">Kód feltöltés</h1>
+    </div>
 
-<mat-tab-group mat-stretch-tabs class="min-height" animationDuration="750ms">
-    <mat-tab label="Fájl feltöltés" [disabled]="isCode()"
-        [matTooltipDisabled]="!isCode()" matTooltip="Fájlból feltöltéshez törölje ki a beírt szöveget!">
-        <!--<ng-template mat-tab-label>
-            <label  class="labelHeading"
+    <mat-tab-group mat-stretch-tabs class="max-height" animationDuration="750ms">
+        <mat-tab label="Fájl feltöltés" [disabled]="isCode()"
             [matTooltipDisabled]="!isCode()" matTooltip="Fájlból feltöltéshez törölje ki a beírt szöveget!">
-                Fájl feltöltés
-            </label>
-		</ng-template>-->
-        <app-file-upload (change)="onChange($event)"></app-file-upload>
-    </mat-tab>
-    <mat-tab label="Szövegbevitel" [disabled]="isFile()"
-        [matTooltipDisabled]="!isFile()" matTooltip="Szövegbevitelhez törölje ki a feltöltött fájlt!">
-        <mat-form-field appearance="fill" class="input-textarea">
-            <mat-label>Írd vagy másold be a kódot</mat-label>
-            <textarea matInput [(ngModel)]="code" placeholder="control Ingress(inout headers hdr..."></textarea>
-        </mat-form-field>
-    </mat-tab>
-</mat-tab-group>
+            <!--<ng-template mat-tab-label>
+                <label  class="labelHeading"
+                [matTooltipDisabled]="!isCode()" matTooltip="Fájlból feltöltéshez törölje ki a beírt szöveget!">
+                    Fájl feltöltés
+                </label>
+            </ng-template>-->
+            <app-file-upload (change)="onChange($event)"></app-file-upload>
+        </mat-tab>
+        <mat-tab label="Szövegbevitel" [disabled]="isFile()"
+            [matTooltipDisabled]="!isFile()" matTooltip="Szövegbevitelhez törölje ki a feltöltött fájlt!">
+            <mat-form-field appearance="fill" class="input-textarea">
+                <mat-label>Írd vagy másold be a kódot</mat-label>
+                <textarea matInput [(ngModel)]="code" placeholder="control Ingress(inout headers hdr..."></textarea>
+            </mat-form-field>
+        </mat-tab>
+    </mat-tab-group>
 
-<div class="next-btn">
-    <button mat-raised-button color="primary" class="m-btn" (click)="onNext()" [disabled]="getNextDisabled()">
-        Folytatás
-        <mat-icon>
-            send
-        </mat-icon>
-    </button>
+    <div class="next-btn">
+        <button mat-raised-button color="primary" class="m-btn" (click)="onNext()" [disabled]="getNextDisabled()">
+            Folytatás
+            <mat-icon>
+                send
+            </mat-icon>
+        </button>
+    </div>
 </div>
