Dialog kész,  gráf logika újragondolása

--- a/P4Analyst/AngularApp/ClientApp/src/app/graph-view/graph-view.component.html
+++ b/P4Analyst/AngularApp/ClientApp/src/app/graph-view/graph-view.component.html
@@ -2,6 +2,10 @@
     <h1>Gráf</h1>
 </div>
 
-<div>
+<!--<div>
     <app-graph [type]="'controlflowgraph'" [draw]="true"></app-graph>
+</div>-->
+
+<div>
+    <app-graph [type]="'dataflowgraph'" [draw]="true"></app-graph>
 </div>
