--- a/P4Analyst/AngularApp/ClientApp/src/scss/notification.scss
+++ b/P4Analyst/AngularApp/ClientApp/src/scss/notification.scss
@@ -1,24 +1,24 @@
 .info-notification {
   background: blue;
-  color: black;
+  color: whitesmoke;
   font-weight: bold;
 }
 
 .success-notification {
   background: green;
-  color: black;
+  color: whitesmoke;
   font-weight: bold;
 }
 
 .warning-notification {
   background: yellow;
-  color: black;
+  color: whitesmoke;
   font-weight: bold;
 }
 
 .error-notification{
   background-color: red;
-  color: black;
+  color: whitesmoke;
   font-weight: bold;
 }
 
