--- a/P4Analyst/AngularApp/ClientApp/src/scss/custom-component-themes.scss
+++ b/P4Analyst/AngularApp/ClientApp/src/scss/custom-component-themes.scss
@@ -1,7 +1,7 @@
 @import '../app/nav-bar/nav-bar.component.scss-theme';
 @import './dialog.scss-theme';
 
-@mixin custom-components-theme($theme, $theme-info, $theme-success, $theme-warnig, $theme-error) {
+@mixin custom-components-theme($theme) {
   @include nav-bar-component-theme($theme);
   @include dialog-component-theme($theme);
 }
