--- a/P4Analyst/AngularApp/ClientApp/src/app/components/mat-animated-icon/mat-animated-icon.component.html
+++ b/P4Analyst/AngularApp/ClientApp/src/app/components/mat-animated-icon/mat-animated-icon.component.html
@@ -1,6 +1,5 @@
 <mat-icon
   [ngClass]="{'animate' : animate, 'play': animate && playAndPause, 'pause': !animate && playAndPause}"
-  color="{{animate ? colorEnd : colorStart}}"
-  (click)="toggle()">
+  color="{{animate ? colorEnd : colorStart}}">
   {{animate ? end : start}}
 </mat-icon>
