--- a/P4Analyst/AngularApp/ClientApp/src/scss/dialog.scss
+++ b/P4Analyst/AngularApp/ClientApp/src/scss/dialog.scss
@@ -16,6 +16,7 @@ button.dialog-close-button {
     padding: 0 !important;
     flex-direction: column;
     overflow: hidden !important;
+    border-radius: 5px;
     .mat-dialog-title {
         padding: 12px 12px 12px 20px;
         margin-bottom: 0;
