--- a/P4Analyst/AngularApp/ClientApp/src/app/components/snack-bar-template/snack-bar-template.component.html
+++ b/P4Analyst/AngularApp/ClientApp/src/app/components/snack-bar-template/snack-bar-template.component.html
@@ -1,6 +1,6 @@
 <div class="flex">
     <mat-icon class="notification-icon">{{data.icon}}</mat-icon>
-    <div class="data">{{data.message}}</div>
+    <div class="data">{{data.text}}</div>
     <div class="dismiss notification-icon">
         <button mat-icon-button (click)="snackBarRef.dismiss()">
             <mat-icon>close</mat-icon>
