--- a/P4Analyst/AngularApp/ClientApp/src/app/file-upload/edit-dialog/edit-dialog.component.html
+++ b/P4Analyst/AngularApp/ClientApp/src/app/file-upload/edit-dialog/edit-dialog.component.html
@@ -1,4 +1,4 @@
-<div class="dialog-header" attr.color="primary">
+<div class="dialog-header" [attr.backgroundColor]="'primary'">
     <h1 mat-dialog-title>Szerkesztés</h1>
     <button mat-icon-button class="dialog-close-button" (click)="onNoClick()">
       <mat-icon>
