--- a/P4Analyst/AngularApp/ClientApp/src/app/graph-view/graph-view.component.html
+++ b/P4Analyst/AngularApp/ClientApp/src/app/graph-view/graph-view.component.html
@@ -1,17 +1,31 @@
 <mat-tab-group mat-stretch-tabs class="max-height" animationDuration="750ms" [selectedIndex]="selected.value" (selectedIndexChange)="onTabChange($event)" (resized)="onResized($event)">
-    <mat-tab label="Vezérlésfolyam gráf">
-        <app-graph #controlFlowGraph [type]="keys[0]" [draw]="false" [initialize]="true" [parentElementId]="'mat-tab-content-0-0'" (controlFlowGraphClick)="addDataFlowGraph($event)"></app-graph>
-    </mat-tab>
-    <mat-tab label="Adatfolyam gráf">
-        <app-graph [type]="keys[1]" [draw]="false" [initialize]="dataflowgraphIsActiveTab" [parentElementId]="'mat-tab-content-0-1'" (dataFlowGraphClick)="[controlFlowGraph.selectNode($event), selected.setValue(0)]"></app-graph>
-    </mat-tab>
-    <mat-tab *ngFor="let tab of tabs; let index = index" [label]="tab.tabName">
+    <mat-tab>
         <ng-template mat-tab-label>
-            {{tab.tabName}}
-            <button mat-icon-button (click)="removeTab(index)">
+            Vezérlésfolyam gráf
+            <button mat-icon-button [disabled]="buttonsDisabled[0]" class="tab-button" (click)="[controlFlowGraph.BFS(), controlAnimatedIcon.toggle()]">
+                <mat-animated-icon #controlAnimatedIcon start="pause_circle_filled" end="play_circle_filled" [playAndPause]="true" animate="true"></mat-animated-icon>
+            </button>
+        </ng-template>
+        <app-graph id="controlFlowGraph" #controlFlowGraph [type]="keys[0]" [draw]="true" [initialize]="true" [parentElementId]="'mat-tab-content-0-0'"
+                   (controlFlowGraphClick)="addDataFlowGraph($event)" (BFSEnd)="setIconToogle(0)" (drawEnd)="buttonsDisabled[0] = false;"></app-graph>
+    </mat-tab>
+    <mat-tab #tab>
+        <ng-template mat-tab-label>
+            Adatfolyam gráf
+            <button mat-icon-button [disabled]="buttonsDisabled[1]" class="tab-button" (click)="[dataFlowGraph.BFS(), dataAnimatedIcon.toggle()]">
+                <mat-animated-icon #dataAnimatedIcon start="pause_circle_filled" end="play_circle_filled" [playAndPause]="true" animate="true"></mat-animated-icon>
+            </button>
+        </ng-template>
+        <app-graph #dataFlowGraph [type]="keys[1]" [draw]="true" [initialize]="dataflowgraphIsActiveTab" [parentElementId]="'mat-tab-content-0-1'"
+                (dataFlowGraphClick)="callControlFlowGraphSelect($event)" (BFSEnd)="setIconToogle(1)" (drawEnd)="buttonsDisabled[1] = false;"></app-graph>
+    </mat-tab>
+    <mat-tab *ngFor="let tab of tabs; let index = index" [label]="tab.name">
+        <ng-template mat-tab-label>
+            {{tab.name}}
+            <button mat-icon-button class="tab-button" (click)="removeTab(index)">
                 <mat-icon>close</mat-icon>
             </button>
         </ng-template>
-        <app-graph [draw]="false" [parentElementId]="'mat-tab-content-0-' + index.toString()" [initialize]="index===selected.value"></app-graph>
+        <app-graph [inputGraph]="tab.graph" [type]="tab.id" [draw]="false" [parentElementId]="'mat-tab-content-0-' + index.toString()" [initialize]="index+2===selected.value"></app-graph>
     </mat-tab>
 </mat-tab-group>
