--- a/P4Analyst/AngularApp/ClientApp/src/styles.scss
+++ b/P4Analyst/AngularApp/ClientApp/src/styles.scss
@@ -46,6 +46,14 @@ button.change-color {
   margin-right: 20px !important;
 }
 
+button.bottom-sheet {
+  width: 50%;
+}
+
+button.tab-button {
+  margin-left: 15px;
+}
+
 .max-height {
   height: 100%;
 }
