--- a/P4Analyst/AngularApp/ClientApp/src/scss/notification.scss
+++ b/P4Analyst/AngularApp/ClientApp/src/scss/notification.scss
@@ -1,12 +1,12 @@
 .info-notification {
-  background: blue;
-  color: whitesmoke;
+  background: rgb(75, 75, 255);
+  color: black;
+  font-weight: bold;
 }
 
 .success-notification {
   background: green;
   color: whitesmoke;
-  font-weight: bold;
 }
 
 .warning-notification {
