--- a/P4Analyst/AngularApp/ClientApp/src/app/file-upload/edit-dialog/edit-dialog.component.html
+++ b/P4Analyst/AngularApp/ClientApp/src/app/file-upload/edit-dialog/edit-dialog.component.html
@@ -11,7 +11,7 @@
         <textarea matInput [(ngModel)]="data.content"></textarea>
     </mat-form-field>
 </div>
-<div mat-dialog-actions class="next-btn">
+<div mat-dialog-actions class="dialog-btn">
     <button mat-raised-button (click)="onNoClick()">Mégsem</button>
     <button mat-raised-button color="primary" [mat-dialog-close]="data.content" cdkFocusInitial>Mentés</button>
 </div>
