--- a/P4Analyst/AngularApp/ClientApp/src/app/drag-and-drop-list/drag-and-drop-list.component.html
+++ b/P4Analyst/AngularApp/ClientApp/src/app/drag-and-drop-list/drag-and-drop-list.component.html
@@ -1,20 +1,20 @@
 <div class="drag-drop-lists-container">
     <div class="drag-drop-container">
-        <h2><u>To do</u></h2>
+        <h5><u>Megadott verziók</u></h5>
 
         <div
             cdkDropList
             #from="cdkDropList"
             [cdkDropListData]="fromList"
             [cdkDropListConnectedTo]="[to]"
-            class="example-list"
+            class="drag-drop-list"
             (cdkDropListDropped)="drop($event)">
-            <div class="drag-drop-box" *ngFor="let item of fromList" cdkDrag>{{item}}</div>
+            <div class="drag-drop-box" *ngFor="let item of fromList" cdkDrag>{{item.text}}</div>
         </div>
     </div>
 
     <div class="drag-drop-container">
-        <h2><u>Done</u></h2>
+        <h5><u>Sorba állított verziók</u></h5>
 
         <div
             cdkDropList
@@ -23,7 +23,7 @@
             [cdkDropListConnectedTo]="[from]"
             class="drag-drop-list"
             (cdkDropListDropped)="drop($event)">
-            <div class="drag-drop-box" *ngFor="let item of toList" cdkDrag>{{item}}</div>
+            <div class="drag-drop-box" *ngFor="let item of toList" cdkDrag>{{item.text}}</div>
         </div>
     </div>
 </div>
