--- a/P4Analyst/AngularApp/ClientApp/src/scss/notification.scss
+++ b/P4Analyst/AngularApp/ClientApp/src/scss/notification.scss
@@ -1,7 +1,6 @@
 .info-notification {
-  background: rgb(75, 75, 255);
-  color: black;
-  font-weight: bold;
+  background: rgb(25, 125, 220);
+  color: whitesmoke;
 }
 
 .success-notification {
