--- a/P4Analyst/AngularApp/ClientApp/src/app/drag-and-drop-list/drag-and-drop-list.component.scss
+++ b/P4Analyst/AngularApp/ClientApp/src/app/drag-and-drop-list/drag-and-drop-list.component.scss
@@ -53,7 +53,10 @@
     transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
   }
   
+@media screen and (min-width: 700px) {
   .drag-drop-lists-container {
     display: flex;
     justify-content: center;
   }
+}
+  
